code/force-app/main/default/objects/Campaign/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>審核通過日期</label>
    <type>Date</type>
</CustomField>