code/force-app/main/default/objects/Campaign/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>審核人</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>OP_Team_Head</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>