code/force-app/main/default/objects/Campaign/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <label>行銷活動簡介</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>