code/force-app/main/default/objects/Campaign/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <label>名單開發迄日</label>
    <type>Date</type>
</CustomField>