code/force-app/main/default/objects/Campaign/fields/Campaign_Owner_Emploee_No__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner_Emploee_No__c</fullName>
    <formula>Owner.Employee_No__c</formula>
    <label>行銷活動擁有者員編</label>
    <type>Text</type>
</CustomField>