code/force-app/main/default/objects/Campaign/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <label>名單開發起日</label>
    <type>Date</type>
</CustomField>