code/force-app/main/default/objects/Campaign/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>名單類別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Lead</fullName>
                <label>企個名單</label>
            </value>
            <value>
                <fullName>Prospect Lead</fullName>
                <label>拓客名單</label>
            </value>
            <value>
                <fullName>General Lead</fullName>
                <label>一般名單</label>
            </value>
            <value>
                <fullName>Oversea TMRAC Campaign</fullName>
            </value>
            <value>
                <fullName>Oversea General Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>