code/force-app/main/default/objects/Campaign/fields/Distribute_Country__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Country__c</fullName>
    <label>行銷活動派發國家</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Country</valueSetName>
    </valueSet>
</CustomField>