code/force-app/main/default/objects/Campaign/fields/Lead_Distrib_Logic__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distrib_Logic__c</fullName>
    <label>名單派發邏輯</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ToQueue</fullName>
                <label>派發給有權人員</label>
            </value>
            <value>
                <fullName>ToPerson</fullName>
                <label>直接派發給RM或指定人員</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>