code/force-app/main/default/objects/Campaign/fields/Lead_Eff_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Eff_End_Date__c</fullName>
    <formula>Campaign_End_Date__c + 365</formula>
    <inlineHelpText>名單開發迄日 + 365日</inlineHelpText>
    <label>名單實際有效迄日</label>
    <type>Date</type>
</CustomField>