code/force-app/main/default/objects/Campaign/fields/Lead_Expired__c.field-meta.xml
<CustomField>
    <fullName>Lead_Expired__c</fullName>
    <formula>TODAY() &gt; Lead_Eff_End_Date__c</formula>
    <label>名單實際已到期</label>
    <type>Checkbox</type>
</CustomField>