code/force-app/main/default/objects/Campaign/fields/Roll_up_summary_All_Staging_Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_summary_All_Staging_Lead_Count__c</fullName>
    <description>（客製項目用欄位）名單上傳匯總</description>
    <label>名單上傳匯總</label>
    <summaryFilterItems>
        <field>Staging_Lead__c.Lead_Invalid__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Staging_Lead__c.Related_Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>