code/force-app/main/default/objects/Campaign/fields/Roll_up_summary_formula__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_summary_formula__c</fullName>
    <description>（客製項目用欄位）approval process 控制欄位</description>
    <formula>( 
 IF( ISPICKVAL( Distribute_Country__c , &apos;TW&apos;) , true, false)
 &amp;&amp;
 (
   IF(ISPICKVAL(Lead_Distrib_Logic__c, &apos;ToQueue&apos;) &amp;&amp; Roll_up_summary_All_Staging_Lead_Count__c = Roll_up_summary_ToQueue__c , true, false) 
   || 
   IF(ISPICKVAL(Lead_Distrib_Logic__c, &apos;ToPerson&apos;) &amp;&amp; Roll_up_summary_All_Staging_Lead_Count__c = Roll_up_summary_ToPerson__c , true, false)
 )
)
&amp;&amp;
 Roll_up_summary_All_Staging_Lead_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval process開關</label>
    <type>Checkbox</type>
</CustomField>