code/force-app/main/default/objects/Campaign/fields/Roll_up_summary_ToQueue__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_summary_ToQueue__c</fullName>
    <description>（客製項目用欄位）派發給有權人員匯總</description>
    <label>含派發區部之名單總數</label>
    <summaryFilterItems>
        <field>Staging_Lead__c.Lead_Invalid__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Staging_Lead__c.Distribute_Division__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Staging_Lead__c.Related_Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>