code/force-app/main/default/objects/Campaign/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>名單來源</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External Source</fullName>
                <label>外部名單</label>
            </value>
            <value>
                <fullName>Salesforce Account</fullName>
                <label>Salesforce 產製名單</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>