code/force-app/main/default/objects/Campaign/fields/Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>Type_Desc__c</fullName>
    <label>類別說明</label>
    <length>100</length>
    <type>Text</type>
</CustomField>