code/force-app/main/default/objects/Campaign/recordTypes/Domestic_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Campaign</fullName>
    <active>true</active>
    <label>國內行銷活動</label>
</RecordType>