code/force-app/main/default/objects/Campaign/recordTypes/Oversea_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Oversea_Campaign</fullName>
    <active>true</active>
    <label>Oversea Campaign</label>
</RecordType>